# eggs-machina

./: README.md  pyproject.toml
eggs_machina/: constants.py
eggs_machina/data/: create_synthetic_data.py  data_collected.py  data_utils.py  image_collection.py
eggs_machina/hw_drivers/api/: base.py
eggs_machina/hw_drivers/system/: __init__.py  base.py  exceptions.py  robstride.py
eggs_machina/hw_drivers/system/robstride/: constants.py  robstride.py  robstride_types.py  types.py
eggs_machina/hw_drivers/transport/: PCANBasic.py  base.py  can.py  innomakerusb2canlib.py  usb2can_x2.py
eggs_machina/hw_drivers/transport/can/: PCANBasic.py  can_transport.py  types.py  usb2can_x2.py
eggs_machina/hw_drivers/transport/usb2can_x2/: README.md
eggs_machina/model/: assembly.mjcf
eggs_machina/model/meshes/: RS_01_Rotor.stl  RS_01_Rotor_2.stl  RS_01_Stator.stl
eggs_machina/scripts/: record_episode.py  sim-teleop.py  simulate.py  teleop.py  teleop_data_collection.py  visualize_data.py
eggs_machina/simulation/: environment.py  interface.py
eggs_machina/simulation/assets/: scene.xml  test_render.xml  transfer_cube.xml
eggs_machina/simulation/assets/model/: assembly.urdf
eggs_machina/simulation/assets/model/meshes/: RS_01_Stator_2.stl  assembly.urdf  assembly.xml
eggs_machina/utils/: data_collection_teleop.py  data_utils.py  env_utils.py  robstride_robot.py  teleop.py
tests/integration/: test_image_collector.py  test_robstride_actuator.py  test_robstride_robot.py
tests/unit/: test_image_collector.py
~/.eggs_machina/data/: synthetic.hdf5  synthetic.json
